--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon backend/server.js",
     "build": "npm run build --prefix frontend",
-    "start": "NODE_ENV=production node backend/server.js",
+    "start": "node backend/server.js"
   },
   "type": "module",
   "keywords": [],
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.13.1",
