--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-router-hash-link": "^2.4.3",
     "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
